--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 16 13:59:27 IST 2021
-sdk.dir=C\:\\Users\\abakashap\\AppData\\Local\\Android\\Sdk
+#Tue Feb 23 17:57:39 IST 2021
+sdk.dir=/Users/subhasmitamishra/Library/Android/sdk
